[package]
name = "actix-gcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"                                     # Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust
serde =  { version="1.0.136", features = ['derive'] }   # A generic serialization/deserialization framework
