[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"            # Show desktop notifications (linux, bsd, mac). Pure Rust dbus client and server.
# todo include features needed
tokio = { version = "1", features = ["rt", "macros", "time"] }
iced = "0.3.0"
